WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183246
REGRESSION(
r222843
): [HarfBuzz] Combining enclosed keycap not correctly handled
https://bugs.webkit.org/show_bug.cgi?id=183246
Summary
REGRESSION(r222843): [HarfBuzz] Combining enclosed keycap not correctly handled
Carlos Garcia Campos
Reported
2018-03-01 08:12:45 PST
While working on
bug #183155
I realized that the first emojis shown in
http://www.fileformat.info/info/emoji/browsertest.htm
were not working. This is because we are not correctly handling the combining enclosed keycap since we switched to use ComplexTextController.
Attachments
Patch
(11.15 KB, patch)
2018-03-01 08:32 PST
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
Patch
(11.20 KB, patch)
2018-03-01 08:36 PST
,
Carlos Garcia Campos
mcatanzaro
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2018-03-01 08:32:21 PST
Created
attachment 334817
[details]
Patch
Carlos Garcia Campos
Comment 2
2018-03-01 08:36:27 PST
Created
attachment 334818
[details]
Patch
Michael Catanzaro
Comment 3
2018-03-01 12:15:57 PST
Comment on
attachment 334818
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=334818&action=review
> LayoutTests/platform/gtk/fast/text/combining-enclosing-keycap-expected.txt:1 > +Vector smash protection is enabled.
This shouldn't be in the expected results. Why is this in the expected results? WTF?
Carlos Garcia Campos
Comment 4
2018-03-01 22:33:06 PST
(In reply to Michael Catanzaro from
comment #3
)
> Comment on
attachment 334818
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=334818&action=review
> > > LayoutTests/platform/gtk/fast/text/combining-enclosing-keycap-expected.txt:1 > > +Vector smash protection is enabled. > > This shouldn't be in the expected results. Why is this in the expected > results? WTF?
Oh! This is because of resource load stats always enabled in tests. It queries the plugins data and stupid flash plugin spits that to stdout when loaded, making all my non-ref tests to fail, btw.
Carlos Garcia Campos
Comment 5
2018-03-01 22:43:27 PST
Committed
r229165
: <
https://trac.webkit.org/changeset/229165
>
Radar WebKit Bug Importer
Comment 6
2018-03-01 22:44:28 PST
<
rdar://problem/38056723
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug